# PySimpleGraph

./: pyproject.toml  requirements.txt  setup.py
src/simple_graph_sqlite/: __init__.py  base.py  database.py  visualizers.py
tests/: database_test.py  test_common.py  visualizers_test.py
tests/test_base/: test_db.sqlite  test_graph.dot
